<resources>
    <string name="app_name">Splick-update</string>
    <string name="let_s_get_started">LET’S GET STARTED</string>
    <string name="todo">todo</string>
    <string name="who">Who are You?</string>
    <string name="affiliate">Affiliate</string>
    <string name="business">Business</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="upload">Upload</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="insta_signup">Sign Up with Insta</string>
    <string name="insta">Instagram</string>
    <string name="fb">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="snapchat">Snapchat</string>
    <string name="connect">Connect</string>

    <string name="signup">Sign Up</string>
    <string name="about">About</string>
    <string name="about_desc">Please enter your name, username and location</string>
    <string name="tags">Tags</string>
    <string name="tags_desc">Get discovered more easily by adding up to five relevant tags to your profile.</string>
    <string name="bio">Biography</string>
    <string name="bio_desc">Write a little bit about yourself.</string>
    <string name="social_reach">Social Reach</string>
    <string name="social_reach_desc">Showcase your social reach and let companies find your social profiles.</string>
    <string name="portfolio">Portfolio</string>
    <string name="portfolio_desc">Add pictures to your portfolio and showcase your creative style.</string>
    <string name="complete_profile">Profile Complete!</string>
    <string name="complete_profile_desc">Your profile is complete. Now you are able to start acquiring partnerships and earn money. </string>
    <string name="bio_hint">My name is John...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>

    <string name="news_feed">News Feed</string>
    <string name="news_feed_desc">Add content to your news feed to showcase what’s going on within the company.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_insta">Sign In with Insta</string>
    <string name="forget_password">Forget Password<b>?</b></string>
    <string name="message">Messages</string>
    <string name="send">send</string>
    <string name="write_msg">Write your message…</string>
    <string name="nike">Nike</string>
    <string name="active_now">Active Now</string>
    <string name="link">Copy Link</string>
    <string name="clicks">Clicks</string>
    <string name="sales">Sales</string>
    <string name="commission">Commission</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">GOT IT</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="test_String1">Creating a Button Selector (which changes colour on press) with Rounded Corners. Create an xml rounded_button_selector.xml in the Drawable Folder. Paste the below code and apply it as the Button Background. Creating a Button Selector (which changes colour on press) with Rounded Corners. Create an xml rounded_button_selector.xml in the Drawable Folder. Paste the below code and apply it as the Button Background.</string>
    <string name="test_String2">Creating a Button Selector (which changes colour on press) with Rounded Corners. Create an xml rounded_button_selector.xml in the Drawable Folder. Paste the below code and apply it as the Button Background.</string>
    <string name="filter">Filter</string>

    <string name="_1d">1D</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_6m">6M</string>
    <string name="_1Y">1Y</string>
    <string name="payouts">Payouts</string>
    <string name="statistics">statistics</string>

</resources>
