<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back_btn"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/skip_bio_tv"
        android:text="@string/skip"
        style="@style/skip_style" />
    <TextView
        android:id="@+id/sign_up_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/social_reach"
        android:layout_below="@id/back_image"
        style="@style/header_text_style"/>
    <TextView
        android:id="@+id/sign_up_t_desc"
        android:text="@string/social_reach_desc"
        android:layout_below="@id/sign_up_t"
        style="@style/header_text_desc_style"/>

    <TextView
        android:id="@+id/insta_head"
        android:text="@string/insta"
        style="@style/social_reach_head_style"
        android:layout_below="@id/sign_up_t_desc"
        />
    <TextView
        android:id="@+id/connect_to_insta"
        android:text="@string/connect"
        style="@style/social_reach_connect_style"
        android:layout_below="@id/sign_up_t_desc"
        />

    <TextView
        android:id="@+id/fb_head"
        android:text="@string/fb"
        style="@style/social_reach_head_style"
        android:layout_below="@id/insta_head"
        />
    <TextView
        android:id="@+id/connect_to_fb"
        android:text="@string/connect"
        style="@style/social_reach_connect_style"
        android:layout_below="@id/connect_to_insta"
        />

    <TextView
        android:id="@+id/twitter_head"
        android:text="@string/twitter"
        style="@style/social_reach_head_style"
        android:layout_below="@id/fb_head"
        />
    <TextView
        android:id="@+id/connect_to_twitter"
        android:text="@string/connect"
        style="@style/social_reach_connect_style"
        android:layout_below="@id/connect_to_fb"
        />

    <TextView
        android:id="@+id/youtube_head"
        android:text="@string/youtube"
        style="@style/social_reach_head_style"
        android:layout_below="@id/twitter_head"
        />
    <TextView
        android:id="@+id/connect_to_youtube"
        android:text="@string/connect"
        style="@style/social_reach_connect_style"
        android:layout_below="@id/connect_to_twitter"
        />

    <TextView
        android:id="@+id/snap_chat_head"
        android:text="@string/snapchat"
        style="@style/social_reach_head_style"
        android:layout_below="@id/youtube_head"
        />
    <TextView
        android:id="@+id/connect_to_snapchat"
        android:text="@string/connect"
        style="@style/social_reach_connect_style"
        android:layout_below="@id/connect_to_youtube"
        />

    <Button
        android:id="@+id/sign_up_bio_next_btn"
        style="@style/black_btn_style"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        />
</RelativeLayout>