<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back_btn"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/skip_nf_tv"
        android:text="@string/skip"
        style="@style/skip_style" />
    <TextView
        android:id="@+id/sign_up_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_feed"
        android:layout_below="@id/back_image"
        style="@style/header_text_style"/>
    <TextView
        android:id="@+id/sign_up_t_desc"
        android:text="@string/news_feed_desc"
        android:layout_below="@id/sign_up_t"
        style="@style/header_text_desc_style"/>
    <ImageView
        android:id="@+id/news_feed_image"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_300sdp"
        android:src="@drawable/app_icon"
        android:layout_below="@id/sign_up_t_desc"
        android:layout_margin="@dimen/_20sdp"
        />

    <Button
        android:id="@+id/news_feed_upload_btn"
        style="@style/black_btn_style"
        android:text="@string/upload"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        />
</RelativeLayout>