<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/type_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/type_selection_image"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/who_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/type_image"
        style="@style/who_style_type_select"/>
    <Button
        android:id="@+id/affiliate_signup_btn"
        style="@style/black_btn_style"
        android:text="@string/affiliate"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_below="@id/who_text"
        />
    <Button
        android:id="@+id/business_signup_btn"
        style="@style/black_btn_style"
        android:text="@string/business"
        android:layout_below="@id/affiliate_signup_btn"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:gravity="center"
        android:textColor="@color/gray_color"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_20sdp"
        />
    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:textColor="@color/black_text"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_225sdp"
        />

</RelativeLayout>