<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back_btn"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/skip_tag_tv"
        style="@style/skip_style"
        android:text="@string/skip"/>
    <TextView
        android:id="@+id/sign_up_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:layout_below="@id/back_image"
        style="@style/header_text_style"/>
    <TextView
        android:id="@+id/sign_up_t_desc"
        android:text="@string/tags_desc"
        android:layout_below="@id/sign_up_t"
        style="@style/header_text_desc_style"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_t_desc"
        android:id="@+id/chipGroup"
        android:layout_margin="@dimen/_5sdp"
        app:chipSpacing="@dimen/_2sdp"
        />
    <Button
        android:id="@+id/sign_up_tags_next_btn"
        style="@style/black_btn_style"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        />
</RelativeLayout>