<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back_btn"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/skip_bio_tv"
        android:text="@string/skip"
        style="@style/skip_style" />
    <TextView
        android:id="@+id/sign_up_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portfolio"
        android:layout_below="@id/back_image"
        style="@style/header_text_style"/>
    <TextView
        android:id="@+id/sign_up_t_desc"
        android:text="@string/portfolio_desc"
        android:layout_below="@id/sign_up_t"
        style="@style/header_text_desc_style"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/portfolio_upload_btn"
        android:layout_below="@id/sign_up_t_desc"
        android:layout_margin="@dimen/_10sdp"
        tools:listitem="@layout/portfolio_recycler_view" />
    <Button
        android:id="@+id/portfolio_upload_btn"
        style="@style/black_btn_style"
        android:text="@string/upload"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        />
</RelativeLayout>