<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/cancel_tags_tv"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/cancel"
        />
    <TextView
        android:layout_height="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:text="@string/tags"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/add_more_tags_tv"
        android:text="@string/add"
        style="@style/skip_style" />
    <EditText
        android:id="@+id/search_tags_edt"
        style="@style/input_fields_style"
        android:layout_below="@id/add_more_tags_tv"
        android:hint="@string/search"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:background="@drawable/rounded_buttons"
        android:autofillHints="" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_tags_edt"
        android:layout_margin="@dimen/_10sdp"
        />

</RelativeLayout>