<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back_btn"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/sign_up_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_below="@id/back_image"
        style="@style/header_text_style"/>
    <TextView
        android:id="@+id/sign_up_t_desc"
        android:text="@string/about_desc"
        android:layout_below="@id/sign_up_t"
        style="@style/header_text_desc_style"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/about_name_edt1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_below="@id/sign_up_t_desc"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:hint="@string/name"
        app:errorEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/about_name_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:inputType="textEmailAddress">
    </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/about_username_edt1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_below="@id/about_name_edt1"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:hint="@string/username"
        app:errorEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/about_username_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:inputType="textEmailAddress">
    </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/about_location_edt1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_below="@id/about_username_edt1"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:hint="@string/location"
        app:errorEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/about_location_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:inputType="textEmailAddress">
    </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>





    <Button
        android:id="@+id/sign_up_about_next_btn"
        style="@style/black_btn_style"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        />
</RelativeLayout>