<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/lighter_gray"
    >
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="@dimen/_130sdp"
      app:cardCornerRadius="@dimen/_15sdp"
      android:layout_margin="@dimen/_10sdp"
      android:contentDescription="@string/app_name"
      >
    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        >
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/deal_user_image"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/download"/>
    <TextView
        android:id="@+id/deal_user_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"
        android:layout_toEndOf="@+id/deal_user_image"/>
    <TextView
        android:id="@+id/deal_copy_link"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/link"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_alignParentEnd="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/gray_color"
        android:layout_below="@id/deal_copy_link"
        android:layout_marginTop="@dimen/_5sdp"/>


    <TextView
        android:id="@+id/clicks_txt"
        android:text="@string/clicks"
        style="@style/deal_xml_style"
        />
    <TextView
        android:id="@+id/deal_clicks_value"
        style="@style/deals_value_style" />
    <TextView
        android:id="@+id/sale_txt"
        style="@style/deal_xml_style"
        android:text="@string/sales"
        android:layout_centerHorizontal="true"
    />
    <TextView
        android:id="@+id/deal_sale_value"
        style="@style/deals_value_style"
        android:layout_below="@id/sale_txt"
        android:layout_centerHorizontal="true"
      />
    <TextView
      android:id="@+id/commission_txt"
      style="@style/deal_xml_style"
      android:text="@string/commission"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="@dimen/_5sdp"
    />
    <TextView
        android:id="@+id/deal_commission_value"
        style="@style/deals_value_style"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/_5sdp"
      />

    </RelativeLayout>
  </androidx.cardview.widget.CardView>
</RelativeLayout>